--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.thymeleaf.cache=false
+server.address=localhost
+server.port=3000
 
 #connect database
 
 spring.devtools.restart.enabled=true
-
 spring.datasource.url=qlbh@//localhost:1521/xe
 spring.datasource.username=qlbh
 spring.datasource.password=123
