--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,14 @@ server.port=3000
 #connect database
 
 spring.devtools.restart.enabled=true
-spring.datasource.url=qlbh@//localhost:1521/xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=qlbh
 spring.datasource.password=123
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-#spring.jpa.show-sql=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 spring.datasource.hikari.connection-timeout=50000
 spring.datasource.hikari.idle-timeout=300000
